--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "amshegarh",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
     "apollo-server-express": "^2.16.1",
+    "babel-cli": "^6.26.0",
     "cors": "latest",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -24,9 +28,5 @@
     "pg": "^8.3.3",
     "pg-promise": "^10.6.1"
   },
-  "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0"
-  }
+  "devDependencies": {}
 }
