--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.18",
     "pg": "^8.3.3",
-    "pg-promise": "^10.6.1"
+    "pg-promise": "^10.6.1",
+    "process": "latest"
   },
   "devDependencies": {}
 }
