--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "graphql-tools": "^6.0.18",
     "pg": "^8.3.3",
     "pg-promise": "^10.6.1",
-    "process": "latest"
+    "process": "^0.11.10"
   },
   "devDependencies": {}
 }
